Update Webpage - Data Section

--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,8 @@
 			<ul>
 				<li><a href="about.html">About</a></li>
 				<li><a href="gallery.html" class="active">Gallery</a></li>
-				<li><a href="projects.html">Projects</a></li>
+				<li><a href="projects.html">Programming</a></li>
+				<li><a href="projects_datascience.html">Data science</a></li>
 				<li><a href="mailto:danielmoralescast@hotmail.com">Contact</a></li>
 			</ul>
 		</nav>
