--- a/about.html
+++ b/about.html
@@ -53,7 +53,8 @@
 			<ul>
 				<li><a href="about.html" class="active">About</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="projects.html">Projects</a></li>
+				<li><a href="projects.html">Programming</a></li>
+				<li><a href="projects_datascience.html">Data science</a></li>
 				<li><a href="mailto:danielmoralescast@hotmail.com">Contact</a></li>
 			</ul>
 		</nav>
@@ -74,7 +75,7 @@
 		<div class="about-warp">
 			<div class="about-left">
 				<div class="about-img">
-					<img src="img/profiledamc.png" alt="">
+					<img src="img/profiledamc2.png" alt="">
 				</div>
 				<div class="profile-text text-white">
 					<h2>Hello There!</h2>
@@ -82,7 +83,7 @@
 					<p>Hello my name is Daniel and I'm from Mexico,
 						I'm a Software Engineer. I'm passionate about technology, programming and science in general, I like to learn new things every day and I dream of changing the world in some way... I want to continue studying and preparing to get the job of my dreams, 
 						continue contributing and sharing in my communities and growing in all areas.</p>
-					<a href="img/projects/Daniel_Castillo_Resume.pdf" target="_blank" class="profile-btn">Resume</a>
+					<a href="img/projects/DAMC_Resume.pdf" target="_blank" class="profile-btn">Resume</a>
 					<a href="mailto:danielmoralescast@hotmail.com" class="profile-email">danielmoralescast@hotmail.com</a>
 				</div>
 			</div>
