--- a/projects_datascience.html
+++ b/projects_datascience.html
@@ -54,8 +54,7 @@
 			<ul>
 				<li><a href="about.html">About</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="projects.html">Programming</a></li>
-				<li><a href="projects_datascience.html">Data science</a></li>
+				<li><a href="blog.html" class="active">Projects</a></li>
 				<li><a href="mailto:danielmoralescast@hotmail.com">Contact</a></li>
 			</ul>
 		</nav>
