Update personal webpage

--- a/projects_datascience.html
+++ b/projects_datascience.html
@@ -77,170 +77,37 @@
 				<div class="blog-grid-sizer"></div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/projects/izc.jpg" alt="">
-						<div class="bi-tag">IZC System - Labsol Network</div>
+						<img src="img/data_science/moodle/acceslog.jpg" alt="">
+						<div class="bi-tag">Cleaning Server Moodle - University Server</div>
 						<div class="bi-text">
-							<h3><a href="izc_details.html">Sistema Instituto Zacatecano de Cultura.</a></h3>
+							<h3><a href="servidor_moodle.html">Análisis de información de plataforma Moodle.</a></h3>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">SSTE School Career</div>
+						<img src="img/data_science/desicion_rules/desicion_rules_cover.svg" alt="">
+						<div class="bi-tag">Desicion Rules - 1R Algorithm</div>
 						<div class="bi-text">
-							<h3>CASE UAZ School Career System</h3>
-							<a href="https://github.com/DanielAMCastillo/Sistema_Trayectoria_Escolar_SSTE" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<h3><a href="desicion_rules.html">Desicion Rules.</a></h3>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Cozcyt Planning System</div>
+						<img src="img/data_science/naive_bayes/naive_bayes.png" alt="">
+						<div class="bi-tag">Naive Bayes Algorithm</div>
 						<div class="bi-text">
-							<h3><a href="">Cozcyt Planning System</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Planeacion_Cozcyt_Dev" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<h3><a href="naive_bayes.html">Naive Bayes Movies</a></h3>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Devii App</div>
+						<img src="img/data_science/nn_realstate/realstatenn.png" alt="">
+						<div class="bi-tag">Neural Networks</div>
 						<div class="bi-text">
-							<h3><a href="">Journaling Devii App</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Static-App-Azure" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Azure Cloud Week 2022</div>
-						<div class="bi-text">
-							<h3><a href="">Web ACW MLS.</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Azure-Cloud-Week-MLSA" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Data Structures Python</div>
-						<div class="bi-text">
-							<h3><a href="">Data Structures Using Python</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Azure-Cloud-Week-MLSA" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Data Structues Java</div>
-						<div class="bi-text">
-							<h3><a href="">Data Structues Using Java</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Data_Structures_Java" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Software Architecture</div>
-						<div class="bi-text">
-							<h3><a href="">Public Architecture System Subscribe</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Software-Architecture" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Azure Static App</div>
-						<div class="bi-text">
-							<h3><a href="">Azure Static App Deploy</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Static-App-Azure" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Django Student Registration System</div>
-						<div class="bi-text">
-							<h3><a href="">Programming with Django Framework</a></h3>
-							<a href="https://github.com/DanielAMCastillo/DjangoFramework" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">OOP Java</div>
-						<div class="bi-text">
-							<h3><a href="">Object Oriented Programming with Java</a></h3>
-							<a href="https://github.com/DanielAMCastillo/POO2" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">SQL Databases</div>
-						<div class="bi-text">
-							<h3><a href="">Scripts and DB design with SQL</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Databases_SQL_2" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Data Structures C++</div>
-						<div class="bi-text">
-							<h3><a href="">Data structures with the C++ language</a></h3>
-							<a href="https://github.com/DanielAMCastillo/DataStructuresC" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Analysis and design of algorithms</div>
-						<div class="bi-text">
-							<h3><a href="">Sorting Algorithms</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Algorithm-Analysis" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Personal Software Process</div>
-						<div class="bi-text">
-							<h3><a href="">Personal Software Process - Java</a></h3>
-							<a href="https://github.com/DanielAMCastillo/PersonalSoftwareProcess_PSP" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Testing QA Python</div>
-						<div class="bi-text">
-							<h3><a href="">Using Selenium-QA-Python</a></h3>
-							<a href="https://github.com/DanielAMCastillo/TestingQA_Python" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Python Math - Advanced</div>
-						<div class="bi-text">
-							<h3><a href="">Advanced programming with Python</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Python-Math" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<h3><a href="nn_realstate.html">Real State Price Prediction</a></h3>
 						</div>
 					</div>
 				</div>
