ETL - Project - Documented

--- a/projects_datascience.html
+++ b/projects_datascience.html
@@ -54,7 +54,7 @@
 			<ul>
 				<li><a href="about.html">About</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="blog.html" class="active">Projects</a></li>
+				<li><a href="projects.html">Programming</a></li>
 				<li><a href="mailto:danielmoralescast@hotmail.com">Contact</a></li>
 			</ul>
 		</nav>
@@ -108,6 +108,16 @@
 						<div class="bi-tag">Neural Networks</div>
 						<div class="bi-text">
 							<h3><a href="nn_realstate.html">Real State Price Prediction</a></h3>
+						</div>
+					</div>
+				</div>
+
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/data_science/etl_python_movies/etl.png" alt="">
+						<div class="bi-tag">Dataset ETL - Python</div>
+						<div class="bi-text">
+							<h3><a href="etl_python_movies.html">ETL-CSV-Python-Sqlite</a></h3>
 						</div>
 					</div>
 				</div>
