projects added, size of square fixed

--- a/projects.html
+++ b/projects.html
@@ -87,164 +87,198 @@
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">SSTE School Career</div>
 						<div class="bi-text">
 							<h3>CASE UAZ School Career System</h3>
-							<a href="https://github.com/DanielAMCastillo/Sistema_Trayectoria_Escolar_SSTE" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/Sistema_CASE_SSTE" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Cozcyt Planning System</div>
 						<div class="bi-text">
 							<h3><a href="">Cozcyt Planning System</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Planeacion_Cozcyt_Dev" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/Planeacion_Cozcyt_Dev" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Devii App</div>
 						<div class="bi-text">
 							<h3><a href="">Journaling Devii App</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Static-App-Azure" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/TSP_DevForU_App" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Azure Cloud Week 2022</div>
 						<div class="bi-text">
 							<h3><a href="">Web ACW MLS.</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Azure-Cloud-Week-MLSA" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/Azure-Cloud-Week-2022" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Data Structures Python</div>
 						<div class="bi-text">
 							<h3><a href="">Data Structures Using Python</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Azure-Cloud-Week-MLSA" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/DataStructuresPython" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Data Structues Java</div>
 						<div class="bi-text">
 							<h3><a href="">Data Structues Using Java</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Data_Structures_Java" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/DataStructuresJava" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Software Architecture</div>
 						<div class="bi-text">
 							<h3><a href="">Public Architecture System Subscribe</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Software-Architecture" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/publica-suscribe" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Azure Static App</div>
 						<div class="bi-text">
 							<h3><a href="">Azure Static App Deploy</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Static-App-Azure" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/my-static-web-app-and-api" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Django Student Registration System</div>
 						<div class="bi-text">
 							<h3><a href="">Programming with Django Framework</a></h3>
-							<a href="https://github.com/DanielAMCastillo/DjangoFramework" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/Frameworks" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">OOP Java</div>
 						<div class="bi-text">
 							<h3><a href="">Object Oriented Programming with Java</a></h3>
-							<a href="https://github.com/DanielAMCastillo/POO2" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/POO2" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">SQL Databases</div>
 						<div class="bi-text">
 							<h3><a href="">Scripts and DB design with SQL</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Databases_SQL_2" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/Databases2" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
-						<div class="bi-tag">Data Structures C++</div>
-						<div class="bi-text">
-							<h3><a href="">Data structures with the C++ language</a></h3>
-							<a href="https://github.com/DanielAMCastillo/DataStructuresC" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Analysis and design of algorithms</div>
 						<div class="bi-text">
 							<h3><a href="">Sorting Algorithms</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Algorithm-Analysis" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/AnalisisYDisenioDeAlgoritmos" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
+						<div class="bi-tag">Data Structures C++</div>
+						<div class="bi-text">
+							<h3><a href="">Data structures with the C++ language</a></h3>
+							<a href="https://github.com/DanielMCastillo/DataStructuresC--" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Personal Software Process</div>
 						<div class="bi-text">
 							<h3><a href="">Personal Software Process - Java</a></h3>
-							<a href="https://github.com/DanielAMCastillo/PersonalSoftwareProcess_PSP" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/PersonalSoftwareProcess_PSP" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Testing QA Python</div>
 						<div class="bi-text">
 							<h3><a href="">Using Selenium-QA-Python</a></h3>
-							<a href="https://github.com/DanielAMCastillo/TestingQA_Python" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/Testing" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/ghlogo.svg" alt="">
+						<img src="img/projects/dark.jpg" alt="">
 						<div class="bi-tag">Python Math - Advanced</div>
 						<div class="bi-text">
 							<h3><a href="">Advanced programming with Python</a></h3>
-							<a href="https://github.com/DanielAMCastillo/Python-Math" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+							<a href="https://github.com/DanielMCastillo/PythonMath" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
 				</div>
+
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/dark.jpg" alt="">
+						<div class="bi-tag">NASA API APOD</div>
+						<div class="bi-text">
+							<h3><a href="">Python API'S</a></h3>
+							<a href="https://github.com/DanielMCastillo/NASA_API_DJANGO_APOD" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+
+				
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/dark.jpg" alt="">
+						<div class="bi-tag">Algorithms with Python</div>
+						<div class="bi-text">
+							<h3><a href="">Sorting algorithms - Searching algorithms</a></h3>
+							<a href="https://github.com/DanielMCastillo/Algorithms_Python" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/dark.jpg" alt="">
+						<div class="bi-tag">APIS POKEAPI</div>
+						<div class="bi-text">
+							<h3><a href="">POKEAPI - API'S Pokemon</a></h3>
+							<a href="https://github.com/DanielMCastillo/Apis_Pokeapi" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+				
 			</div>
 		</div>
 	</section>
