--- a/projects_datascience.html
+++ b/projects_datascience.html
@@ -89,7 +89,7 @@
 						<img src="img/data_science/desicion_rules/desicion_rules_cover.svg" alt="">
 						<div class="bi-tag">Desicion Rules - 1R Algorithm</div>
 						<div class="bi-text">
-							<h3><a href="desicion_rules.html">Desicion Rules.</a></h3>
+							<h3><a href="desicion_rules.html">Desicion Rules</a></h3>
 						</div>
 					</div>
 				</div>
@@ -121,6 +121,83 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/data_science/nasa_landings/nasa_landings_ds.png" alt="">
+						<div class="bi-tag">NASA Meteorite Landings - PowerBI</div>
+						<div class="bi-text">
+							<h3><a href="nasa_landings.html">Dataset From Nasa Public</a></h3>
+						</div>
+					</div>
+				</div>
+
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/data_science/titanic_python/header.png" alt="">
+						<div class="bi-tag">Titanic Cleaning Dataset</div>
+						<div class="bi-text">
+							<h3><a href="titanic_ml.html">Titanic-Python</a></h3>
+						</div>
+					</div>
+				</div>
+
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/data_science/python_projects_codes/pipleine_python.svg" alt="">
+						<div class="bi-tag">Pipelines ML - Python</div>
+						<div class="bi-text">
+							<h3><a href="pipeline.html">Pipeline-Python</a></h3>
+						</div>
+					</div>
+				</div>
+
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/dark.jpg" alt="">
+						<div class="bi-tag">Machine Learning Basics</div>
+						<div class="bi-text">
+							<h3><a href="https://github.com/DanielMCastillo/Machine_Learning_Python" target="_blank">Machine Learning Python</a></h3>
+							<a href="https://github.com/DanielMCastillo/Machine_Learning_Python" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+
+				
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/dark.jpg" alt="">
+						<div class="bi-tag">Pandas basics</div>
+						<div class="bi-text">
+							<h3><a href="https://github.com/DanielMCastillo/Pandas" target="_blank">Python Pandas Library</a></h3>
+							<a href="https://github.com/DanielMCastillo/Pandas" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+
+				
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/dark.jpg" alt="">
+						<div class="bi-tag">Numpy basics</div>
+						<div class="bi-text">
+							<h3><a href="https://github.com/DanielMCastillo/NumpyFunctions" target="_blank">Python Numpy Library</a></h3>
+							<a href="https://github.com/DanielMCastillo/NumpyFunctions" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/dark.jpg" alt="">
+						<div class="bi-tag">ETL Python Basics</div>
+						<div class="bi-text">
+							<h3><a href="https://github.com/DanielMCastillo/ETL_Python_Datasets" target="_blank">Python ETL</a></h3>
+							<a href="https://github.com/DanielMCastillo/ETL_Python_Datasets" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</section>
