--- a/projects.html
+++ b/projects.html
@@ -105,6 +105,27 @@
 						</div>
 					</div>
 				</div>
+					<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/POKEAPI.png" alt="">
+						<div class="bi-tag">APIS POKEAPI</div>
+						<div class="bi-text">
+							<h3><a href="">POKEAPI - API'S Pokemon</a></h3>
+							<a href="https://github.com/DanielMCastillo/Apis_Pokeapi" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="img/projects/NASA_API.jpeg" alt="">
+						<div class="bi-tag">NASA MARS API</div>
+						<div class="bi-text">
+							<h3><a href="">Mars Photos - API NASA</a></h3>
+							<a href="https://github.com/DanielMCastillo/Mars_Photos_API_NASA" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
+						</div>
+					</div>
+				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
 						<img src="img/projects/dark.jpg" alt="">
@@ -267,18 +288,7 @@
 							<a href="https://github.com/DanielMCastillo/Algorithms_Python" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="img/projects/dark.jpg" alt="">
-						<div class="bi-tag">APIS POKEAPI</div>
-						<div class="bi-text">
-							<h3><a href="">POKEAPI - API'S Pokemon</a></h3>
-							<a href="https://github.com/DanielMCastillo/Apis_Pokeapi" target="_blank" class="btn "><i class="fa fa-github"></i> Github</a>
-						</div>
-					</div>
-				</div>
-				
+				</div>				
 			</div>
 		</div>
 	</section>
