cover desicion rules

--- a/projects_datascience.html
+++ b/projects_datascience.html
@@ -95,7 +95,7 @@
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/data_science/naive_bayes/naive_bayes.png" alt="">
+						<img src="img/data_science/naive_bayes/desicion_rules.jpg" alt="">
 						<div class="bi-tag">Naive Bayes Algorithm</div>
 						<div class="bi-text">
 							<h3><a href="naive_bayes.html">Naive Bayes Movies</a></h3>
