--- a/projects_datascience.html
+++ b/projects_datascience.html
@@ -86,7 +86,7 @@
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/data_science/desicion_rules/desicion_rules_cover.svg" alt="">
+						<img src="img/data_science/desicion_rules/desicion_rules_cover.jpg" alt="">
 						<div class="bi-tag">Desicion Rules - 1R Algorithm</div>
 						<div class="bi-text">
 							<h3><a href="desicion_rules.html">Desicion Rules</a></h3>
@@ -95,7 +95,7 @@
 				</div>
 				<div class="blog-grid">
 					<div class="blog-item">
-						<img src="img/data_science/naive_bayes/desicion_rules.jpg" alt="">
+						<img src="img/data_science/naive_bayes/naive_bayes.png" alt="">
 						<div class="bi-tag">Naive Bayes Algorithm</div>
 						<div class="bi-text">
 							<h3><a href="naive_bayes.html">Naive Bayes Movies</a></h3>
